# tooling

./: .gitignore  .gitmodules  MODULE.bazel  WORKSPACE
src/lib/: BUILD  size.cc  size.hh  version.hh
src/lib/bytes/: BUILD  complex_type_reader.hh  endian.cc  endian.hh  reader.cc  reader.hh  struct_reader.hh  typed_reader.cc  typed_reader.hh
src/lib/bytes/array/: basic.hh  struct.hh
src/lib/compression/yaz0/: BUILD  parser.cc  parser.hh  types.hh
src/lib/formats/brres/: BUILD  fs_entry.cc  fs_entry.hh  id.cc  id.hh  parser.cc  parser.hh  string_table.cc  string_table.hh  types.hh
src/lib/formats/brres/index_group/: BUILD  parser.cc  parser.hh  repr.cc  repr.hh  types.hh
src/lib/formats/brres/index_group/nodes/: data.cc  data.hh  folder.cc  folder.hh  node.hh
src/lib/formats/brres/nodes/: data.hh  folder.cc  folder.hh  node.hh  root.cc  root.hh
src/lib/formats/u8/: BUILD  parser.cc  parser.hh  parser_state.cc  parser_state.hh  repr.cc  repr.hh  string_table.cc  string_table.hh  types.hh
src/lib/formats/u8/nodes/: file.cc  file.hh  folder.cc  folder.hh  node.cc  node.hh
src/lib/fs/: BUILD  dump.cc  dump.hh  repr.cc  repr.hh
src/lib/fs/nodes/: file.cc  file.hh  folder.cc  folder.hh  node.cc  node.hh
src/tools/brres/: BUILD  main.cc
src/tools/brres-analyse/: BUILD  main.cc
src/tools/brres-analyser/: BUILD  main.cc
src/tools/brres-dump/: BUILD  main.cc
src/tools/u8/: BUILD  main.cc
