###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
  name = "tooling",
  version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.0")
bazel_dep(name = "abseil-cpp", version = "20250814.0")